# ress

./: .gitignore  AGENTS.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  block_cache.md  budgeted_scanning.md  concurrency.md  perf.md  prefetch.md  search.md
ress/: Cargo.toml
ress-core/: Cargo.toml
ress-core/benches/: engine.rs
ress-core/proptest-regressions/: document.txt  search.txt
ress-core/src/: analyzer.rs  cache.rs  document.rs  index.rs  lib.rs  line.rs  prefetch.rs  resolve.rs  scan.rs  schedule.rs  search.rs  source.rs  status.rs  task_owner.rs
ress-core/tests/: no_timing_oracles.rs
ress-filegen/: Cargo.toml
ress-filegen/src/: lib.rs  main.rs
ress-filegen/tests/: cli.rs
ress-perf/: Cargo.toml
ress-perf/src/: main.rs  pty.rs  report.rs  runner.rs  scenarios.rs  screen.rs  test_support.rs
ress/src/: app.rs  cli.rs  main.rs  render.rs  terminal.rs
ress/tests/: smoke.rs
scripts/: perf.sh
