[package]
name = "ress-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
tracing.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3.13"
proptest.workspace = true

[lints]
workspace = true
