[package]
name = "ress-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
async-trait.workspace = true
lru.workspace = true
memchr = "2.7"
regex.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
tracing.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "test-util"] }
tempfile = "3.13"
proptest.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }
ress-filegen = { workspace = true }

[features]
bench-internals = []

[[bench]]
name = "engine"
harness = false
required-features = ["bench-internals"]

[lints]
workspace = true
