[package]
name = "ress-filegen"
description = "deterministic log-like fixture generator for ress tests and benchmarks"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
