[package]
name = "ress"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "ress"

[dependencies]
ress-core.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
futures = "0.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[lints]
workspace = true
